--- a/Redux CRUD/src/App.css
+++ b/Redux CRUD/src/App.css
@@ -53,7 +53,11 @@ td {
 
 /* little bit styling for responsiveness */
 @media only screen and (max-width: 1000px) {
+    body {
+    height: auto;
+    }
     .app {
+        margin: 10rem 0 10rem 0;
         display: flex;
         flex-direction: column;
     }
