--- a/Redux CRUD/src/App.css
+++ b/Redux CRUD/src/App.css
@@ -57,7 +57,7 @@ td {
     height: auto;
     }
     .app {
-        margin: 10rem 0 10rem 0;
+        margin: 6rem 0 0 0;
         display: flex;
         flex-direction: column;
     }
