--- a/Redux CRUD/src/App.css
+++ b/Redux CRUD/src/App.css
@@ -64,10 +64,12 @@ td {
 
     .inputbox {
         width: 100%;
+        height: 12rem;
     }
 
     .listbox {
         width: 100%;
         margin-left: 0;
+        max-height: 24rem;
     }
 }
